src/test/deca/context/invalid/tests/douDecl_field_02_so.deca
class A{
    int x;
    float x;
}// Description: // Teste l'affectation et la conversion int -> float. // // Resultats: // Ligne 12: Not expected type // // Historique: // cree le 13/01/2023
